@@ -1,3 +1,10 @@
+2005-06-09 Mikhail Khodjaiants
+	Bug 94139: User-defined register groups.
+	Support fo the "Restore Default Register Groups" action.
+	+ RestoreDefaultRegisterGroupsActionDelegate.java
+	* plugin.properties
+	* plugin.xml
+
 2005-06-07 Mikhail Khodjaiants
 	New images for mapping source containers.
 	* icons/obj16/mapentry_obj.gif
